--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>My Algo</title>
+        <title>Auto Sender</title>
+        <link rel="icon" type="image/png" href="/src/assets/logo autosender.png" sizes="512x512" />
+
     </head>
     <body>
         <div id="app"></div>
