change name web and add status message in admin dashboard

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Auto Sender</title>
+        <title>Autosender</title>
         <link rel="icon" type="image/png" href="/src/assets/logo autosender.png" sizes="512x512" />
 
     </head>
