feat: add real-time features and utility improvements

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Autosender</title>
         <link rel="icon" type="image/png" href="/src/assets/logo autosender.png" sizes="512x512" />
-
+        <!-- SheetJS library for Excel export -->
+        <script src="https://cdn.sheetjs.com/xlsx-0.20.1/package/dist/xlsx.full.min.js"></script>
     </head>
     <body>
         <div id="app"></div>
